# piranha

./: CMakeLists.txt  README.md
dependencies/libraries/flex/include/: FlexLexer.h
docs/pr/: BUILD_EVIDENCE.md  PR_3_DESCRIPTION.md  PR_SUMMARY.md
include/: ir_context_tree.h  ir_token_info.h  memory_management.h  node.h
src/: ir_binary_operator.cpp  ir_node.cpp  ir_parser_structure.cpp  node_program.cpp
